--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ eframe = "0.29.1"
 egui = "0.29.1"
 egui_extras = "0.29.1"
 env_logger = "0.11.5"
-futures = "0.3.31"
-tokio = { version = "1.40.0", features = ["full"] }
+
+[target.x86_64-pc-widows-gnu]
+linker = "x86_64-w64-mingw32-gcc"
