--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ eframe = "0.29.1"
 egui = "0.29.1"
 egui_extras = "0.29.1"
 env_logger = "0.11.5"
+single-instance = "0.3.3"
 
 [target.x86_64-pc-widows-gnu]
 linker = "x86_64-w64-mingw32-gcc"
